Some minor revisions to the note

--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -141,3 +141,8 @@
    journal={University of Hawaii at Manoa},
 }
 
+@article{weber_1993,
+  title={USC-SIPI image database: Version 4},
+  author={Weber, G},
+  year={1993}
+}
